--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "uuid": "^8.3.2"
   }
 }
