--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.0",
+    "mongodb": "^4.6.0",
     "uuid": "^8.3.2"
   }
 }
